// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common utilities can convert RGB to HEX 1`] = `"333333"`;

exports[`Common utilities can convert RGB to HEX 2`] = `"ff3399"`;

exports[`Common utilities can convert color from HEX to RGB 1`] = `
Object {
  "b": 51,
  "g": 51,
  "r": 51,
}
`;

exports[`Common utilities can convert color from HEX to RGB 2`] = `
Object {
  "b": 51,
  "g": 51,
  "r": 51,
}
`;

exports[`Common utilities can convert color from HEX to RGB 3`] = `
Object {
  "b": 51,
  "g": 51,
  "r": 51,
}
`;

exports[`Common utilities can convert color from HEX to RGB 4`] = `
Object {
  "b": 162,
  "g": 11,
  "r": 240,
}
`;

exports[`Common utilities can convert color from HEX to RGB 5`] = `
Object {
  "b": 162,
  "g": 11,
  "r": 240,
}
`;

exports[`Common utilities can generate rotation matrices 1`] = `
Array [
  Array [
    1,
    0,
    0,
  ],
  Array [
    0,
    1,
    0,
  ],
  Array [
    0,
    0,
    1,
  ],
]
`;

exports[`Common utilities can generate rotation matrices 2`] = `
Array [
  Array [
    1,
    1.224646799147353e-16,
    1.2246467991473535e-16,
  ],
  Array [
    -1.2246467991473532e-16,
    1,
    1.224646799147353e-16,
  ],
  Array [
    -1.2246467991473532e-16,
    -1.2246467991473532e-16,
    1,
  ],
]
`;

exports[`Common utilities can generate rotation matrices 3`] = `
Array [
  Array [
    1,
    0,
    0,
  ],
  Array [
    0,
    -1,
    -1.2246467991473532e-16,
  ],
  Array [
    0,
    1.2246467991473532e-16,
    -1,
  ],
]
`;

exports[`Common utilities can generate rotation matrices 4`] = `
Array [
  Array [
    -1,
    0,
    1.2246467991473532e-16,
  ],
  Array [
    0,
    1,
    0,
  ],
  Array [
    -1.2246467991473532e-16,
    0,
    -1,
  ],
]
`;

exports[`Common utilities can generate rotation matrices 5`] = `
Array [
  Array [
    -1,
    -1.2246467991473532e-16,
    0,
  ],
  Array [
    1.2246467991473532e-16,
    -1,
    0,
  ],
  Array [
    0,
    0,
    1,
  ],
]
`;

exports[`Common utilities can generate rotation matrices 6`] = `
Array [
  Array [
    1,
    -1.2246467991473535e-16,
    -1.224646799147353e-16,
  ],
  Array [
    1.2246467991473532e-16,
    1,
    -1.2246467991473535e-16,
  ],
  Array [
    1.2246467991473532e-16,
    1.2246467991473532e-16,
    1,
  ],
]
`;

exports[`Common utilities can map over object values 1`] = `
Object {
  "a": true,
  "b": true,
  "c": true,
}
`;

exports[`Common utilities can map over object values 2`] = `
Object {
  "a": "A",
  "b": "B",
  "c": "C",
}
`;

exports[`Common utilities can perform matrix multiplication (3x3) 1`] = `
Array [
  Array [
    0,
    0,
    1,
  ],
  Array [
    0,
    1,
    0,
  ],
  Array [
    1,
    0,
    0,
  ],
]
`;

exports[`Common utilities can perform matrix multiplication (3x3) 2`] = `
Array [
  Array [
    0,
    0,
    1,
  ],
  Array [
    1,
    0,
    0,
  ],
  Array [
    0,
    1,
    0,
  ],
]
`;

exports[`Common utilities can perform matrix multiplication (3x3) 3`] = `
Array [
  Array [
    0,
    1,
    0,
  ],
  Array [
    1,
    0,
    0,
  ],
  Array [
    0,
    0,
    1,
  ],
]
`;
